# Turtlebot-Navigation-Stack

./: LICENSE  README.md
doc/: global_smoothing.m  map_generation.m  turtlebot_control.cpp
doc/plots/: diagrams.pptx  global_smoothing.tikz  global_smoothing_dense.tikz  graph_overview.pptx  map1.tikz
doc/presentation/: presentation.pptx
doc/scripts/: global_smoothing.m  map_generation.m
ee4308_turtlebot_project/: CMakeLists.txt  package.xml
ee4308_turtlebot_project/launch/: ee4308_turtle_part1.launch  part1.launch  part2.launch  rviz.launch
ee4308_turtlebot_project/launch/includes/: turtlebot.launch.xml
ee4308_turtlebot_project/rviz/: turtlebot.rviz
ee4308_turtlebot_project/src/: config.py  generate_map.py  global_planner.py  local_planner.py  map_generator.py  map_updater.py  navigation.py  navigation_part1.py  navigation_part2.py  odom_true.py  rviz_interface.py  turtlebot_ee4308_obs_avoidance.cpp  wall_extractor.py
ee4308_turtlebot_project/visualisation/: rqt.perspective  turtlebot.rviz
ee4308_turtlebot_project/worlds/: ee4308_proj_part2.world
turtlebot_simple_navigation/: CMakeLists.txt
turtlebot_simple_navigation/launch/: part1.launch
turtlebot_simple_navigation/launch/includes/: kobuki.launch.xml
turtlebot_simple_navigation/src/: config.py  local_planner.py  map_updater.py  navigation.py  rviz_interface.py
turtlebot_simple_navigation/worlds/: maze_1.world
