<?xml version="1.0"?>
<package>
  <name>turtlebot_simple_navigation</name>
  <version>0.0.0</version>
  <description>The turtlebot_simple_navigation package</description>

  <maintainer email="paul.edouard.sarlin@gmail.com">Paul-Edouard Sarlin</maintainer>
  <license>Undefined</license>
  <buildtool_depend>catkin</buildtool_depend>

</package>
